--- a/public/css/addplants.css
+++ b/public/css/addplants.css
@@ -1,5 +1,22 @@
-import url("https://fonts.googleapis.com/css?family=Inter:400,500|Raleway:400");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css");
 
+@import url("https://fonts.googleapis.com/css?family=Inter:400,500|Raleway:400");
+
+:root {
+  --tan: #fcf9ec;
+  --tom-thumb: #42533b;
+  --background: #754a3f;
+  --black: #000000;
+  --text: #ffffff;
+  --heavy-metal: #2d2d2d;
+  --pink-swan: #b8b8b8;
+  --font-size-m: 11px;
+  --font-size-xxl: 15px;
+  --font-size-s2: 12px;
+  --font-size-xxxl: 36px;
+  --font-family-inter: "Inter", Helvetica;
+  --font-family-raleway: "Raleway", Helvetica;
+}
 
 .add-plants-page {
   align-items: flex-start;
@@ -8,6 +25,10 @@ import url("https://fonts.googleapis.com/css?family=Inter:400,500|Raleway:400");
   flex-direction: column;
   min-height: 832px;
   width: 1280px;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 .hidden,
@@ -63,6 +84,14 @@ import url("https://fonts.googleapis.com/css?family=Inter:400,500|Raleway:400");
   white-space: nowrap;
 }
 
+.inter-normal-heavy-metal-11px {
+  color: var(--heavy-metal);
+  font-family: var(--font-family-inter);
+  font-size: var(--font-size-m);
+  font-style: normal;
+  font-weight: 400;
+}
+
 .frame-9 {
   background-color: var(--pink-swan);
   height: 115px;
@@ -83,6 +112,14 @@ import url("https://fonts.googleapis.com/css?family=Inter:400,500|Raleway:400");
 .add-plants-page .add {
   letter-spacing: 0;
   line-height: normal;
+}
+
+.inter-normal-orange-white-11px {
+  color: var(--tan);
+  font-family: var(--font-family-inter);
+  font-size: var(--font-size-m);
+  font-style: normal;
+  font-weight: 400;
 }
 
 .add-plant {
@@ -107,13 +144,12 @@ import url("https://fonts.googleapis.com/css?family=Inter:400,500|Raleway:400");
 }
 
 .frame-9-1 {
-  background-image: url(https://anima-uploads.s3.amazonaws.com/projects/6453f6cab783beb5cb352f96/releases/6454148ee59842e4665deb8d/img/frame-9.svg);
+  background-image: url(img/frame-9.svg);
 }
 
 .frame-2 {
   align-items: flex-start;
-  background-color: 
-#847263;
+  background-color: #847263;
   display: flex;
   flex-direction: column;
   gap: 14px;
@@ -138,8 +174,7 @@ import url("https://fonts.googleapis.com/css?family=Inter:400,500|Raleway:400");
 
 .frame-12 {
   align-items: flex-start;
-  background-color: 
-#dbc0b9;
+  background-color: #dbc0b9;
   display: flex;
   height: 35px;
   padding: 9px 33px;
@@ -214,7 +249,7 @@ import url("https://fonts.googleapis.com/css?family=Inter:400,500|Raleway:400");
 }
 
 .frame-9-3 {
-  background-image: url(https://anima-uploads.s3.amazonaws.com/projects/6453f6cab783beb5cb352f96/releases/6454148ee59842e4665deb8d/img/frame-9-1.svg);
+  background-image: url(img/frame-9-1.svg);
 }
 
 .plant-container-3 {
@@ -226,7 +261,7 @@ import url("https://fonts.googleapis.com/css?family=Inter:400,500|Raleway:400");
 }
 
 .frame-9-4 {
-  background-image: url(https://anima-uploads.s3.amazonaws.com/projects/6453f6cab783beb5cb352f96/releases/6454148ee59842e4665deb8d/img/frame-9-3.svg);
+  background-image: url(img/frame-9-3.svg);
 }
 
 .snake-plant {
@@ -242,9 +277,7 @@ import url("https://fonts.googleapis.com/css?family=Inter:400,500|Raleway:400");
   align-items: flex-start;
   align-self: center;
   background-color: var(--tom-thumb);
-  box-shadow: 0px 4px 4px 
-#00000040, 0px 4px 4px 
-#00000040;
+  box-shadow: 0px 4px 4px #00000040, 0px 4px 4px #00000040;
   display: flex;
   height: 25px;
   margin-top: 24px;
@@ -277,7 +310,7 @@ import url("https://fonts.googleapis.com/css?family=Inter:400,500|Raleway:400");
 }
 
 .frame-9-2 {
-  background-image: url(https://anima-uploads.s3.amazonaws.com/projects/6453f6cab783beb5cb352f96/releases/6454148ee59842e4665deb8d/img/frame-9-2.svg);
+  background-image: url(img/frame-9-2.svg);
 }
 
 .plant-8 {
@@ -306,4 +339,10 @@ import url("https://fonts.googleapis.com/css?family=Inter:400,500|Raleway:400");
   line-height: normal;
   min-height: 18px;
   white-space: nowrap;
+}
+
+
+.add-plant {
+  background-color: transparent;
+  /* Add any other styling properties as needed */
 }
