--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -8,25 +8,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="./css">
+ 
 </head>
-    <body>
-        <div class="login-page screen">
-            <div class="log-in">
-              <div class="image1"></div>
-              <div class="flex-col">
-                <h1 class="pot-it-like-its-hot">Pot It like It’s hot</h1>
-                 {{#if logged_in}}
-                    <a href="./addplants.handlebars">Login</a> |
-                  {{else}}
-                    <a href="./login.handlebars">login</a>
-                {{/if}}
-                {{{ body }}}
-              </div>
-            </div>
-          </div>
-             
+    <body>  
+        {{{ body }}}        
         <!-- Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -39,6 +24,6 @@
             crossorigin="anonymous"></script>
         <!-- Handlebars JS -->
           <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
-          <script type="text/javascript">
+          <script type="text/javascript"></script>
     </body>
 </html>
