--- a/views/layouts/addplants.handlebars
+++ b/views/layouts/addplants.handlebars
@@ -18,8 +18,8 @@
             <div class="plant-container plant-2">
             <!-- Plant 1 -->
               <div class="plant">
-                <div class="frame-9-1 frame-9-5"></div>
-                <div class="petunia inter-normal-heavy-metal-11px">English Ivy</div>
+                <div class="frame-9-1 frame-9-5" id="#plant-image-1"></div>
+                <div class="petunia inter-normal-heavy-metal-11px" id="#plant-name-1">English Ivy</div>
                 <div class="frame-10">
                   <button class="add-plant add inter-normal-orange-white-11px" type="button">
                     Add plant!
@@ -28,8 +28,8 @@
               </div>
             <!-- Plant 5 -->
               <div class="plant">
-                <div class="frame-9"></div>
-                <div class="petunia-5 inter-normal-heavy-metal-11px">Petunia</div>
+                <div class="frame-9" id="#plant-image-5"></div>
+                <div class="petunia-5 inter-normal-heavy-metal-11px" id="#plant-name-5">Petunia</div>
                 <div class="frame-10">
                   <button class="add-plant add inter-normal-orange-white-11px" type="button">
                     Add plant!
@@ -45,8 +45,8 @@
               <div class="plant-container-1 plant-container-4">
             <!-- Plant 2 -->
                 <div class="plant-3 plant-2">
-                  <div class="frame-9-2 frame-9-5"></div>
-                  <div class="place inter-normal-heavy-metal-11px">Cactus</div>
+                  <div class="frame-9-2 frame-9-5" id="#plant-image-2"></div>
+                  <div class="place inter-normal-heavy-metal-11px" id="#plant-name-2">Cactus</div>
                   <div class="frame-10">
                     <button class="add-plant add inter-normal-orange-white-11px" type="button">
                       Add plant!
@@ -55,8 +55,8 @@
                 </div>
                 <!-- Plant 6 -->
                 <div class="plant-8 plant-2">
-                  <div class="frame-9"></div>
-                  <div class="petunia-5 inter-normal-heavy-metal-11px">Petunia</div>
+                  <div class="frame-9" id="#plant-image-6"></div>
+                  <div class="petunia-5 inter-normal-heavy-metal-11px" id="#plant-name-6">Petunia</div>
                   <div class="frame-10">
                     <button class="add-plant add inter-normal-orange-white-11px" type="button">
                       Add plant!
