rearranged hbs file structure

--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -4,7 +4,7 @@
 
 <div class="login-page screen">
     <div class="container">
-      <img src="/public/img/PILIT_Logo.jpg" class="logo img-fluid" alt="logo">
+      <img src="/img/PILIT_Logo.jpg" class="logo img-fluid" alt="logo">
       <div class="login-box">
         <h1 class="come-view-your-garden">Come view your garden</h1>
         <form method="POST" action="./addplants.handlebars">
