--- a/views/partials/addplants.handlebars
+++ b/views/partials/addplants.handlebars
@@ -1,24 +1,25 @@
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Pot It Like It's Hot</title>
     <link rel="stylesheet" href="./css/addplants.css">
 </head>
 
 <div class="add-plants-page screen">
-        <div class="frame-3">
-          <p class="pot-it-like-its-hot">Pot It Like It’s Hot</p>
-        </div>
-        <div class="flex-row">
-          <div class="flex-row-1">
-            <div class="frame-2">
-              <div class="my-garden">My garden</div>
-              <div class="frame-12"><div class="add-plants add">Add plants</div></div>
-            </div>
+  <div class="banner">
+    <p class="pot-it-like-its-hot">Pot It Like It’s Hot</p>
+  </div>
+  <div class="flex-row">
+      <div class="flex-row-1">
+          
+          
+          {{!-- <div class="left-sidebar">
+              <div class="my-garden"><a href="{{urlFor 'mygarden'}}">My garden</a></div>
+              <div class="add-plants"><a href="{{urlFor 'addplants'}}">Add Plants</a></div>
+          </div> --}}
+
+
             <div class="plant-container plant-2">
             <!-- Plant 1 -->
               <div class="plant">
-                <div class="frame-9-1 frame-9-5"></div>
+                <img src="" class="logo img-fluid" alt="logo">
                 <div class="petunia inter-normal-heavy-metal-11px">English Ivy</div>
                 <div class="frame-10">
                   <button class="add-plant add inter-normal-orange-white-11px" type="button">
@@ -38,7 +39,7 @@
               </div>
 
             </div>
-          </div>
+      </div>
           <div class="flex-col">
             <h1 class="title">Add some plants!</h1>
             <div class="flex-row-2">
@@ -113,5 +114,5 @@
               </div>
             </div>
           </div>
-        </div>
+  </div>
       </div>
