--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -6,8 +6,10 @@
     <div class="container">
       <img src="/img/PILIT_Logo.jpg" class="logo img-fluid" alt="logo">
       <div class="login-box">
-        <h1 class="come-view-your-garden">Come view your garden</h1>
-        <form method="POST" action="./addplants.handlebars">
+        <h1 class="come-view-your-garden">Come view your garden!</h1>
+
+        {{!-- Need to replace with fetch --}}
+        {{!-- <form method="POST" action="./addplants.handlebars"> --}}
           <label for="username">Username:</label>
           <input type="text" id="username" name="username"><br>     
           <label for="password">Password:</label>
