--- a/views/partials/mygarden.handlebars
+++ b/views/partials/mygarden.handlebars
@@ -1,13 +1,10 @@
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Pot It Like It's Hot</title>
     <link rel="stylesheet" href="./css/mygarden.css">
 </head>
 
 <div class="my-garden screen">
   <div class="frame-3">
-    <p class="pot-it-like-its-hot">Pot it like it’s hot</p>
+    <p class="pot-it-like-its-hot">Pot It Like It’s Hot</p>
   </div>
   <div class="flex-row">
     <div class="frame-2">
