added Create Account option

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -92,7 +92,7 @@ label {
   border-radius: 30px;
   display: flex;
   flex-direction: column;
-  gap: 19px;
+  /* gap: 19px; */
   overflow: hidden;
   padding: 31px 174px;
   position: relative;
@@ -110,7 +110,6 @@ label {
   align-items: center;
   background-color: var(--tan);
   display: flex;
-  gap: 96px;
   height: 832px;
   width: 100%;
 }
