--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="./css/login.css">
+    <link rel="stylesheet" href="./css/login-logout.css">
 </head>
 
 <div class="login-page screen">
