--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -15,8 +15,8 @@
           <input type="text" id="username" name="username">   
           <label for="password">Password:</label>
           <input type="password" id="password" name="password">       
-          <input type="submit" value="Login"><br>
-          <input type="submit" value="Create Account">
+          <input type="submit" id="login" value="Login"><br>
+          <input type="submit" id="createAccount" value="Create Account">
           {{!-- <input type="submit" value="Create Account"> --}}
         </form>
       </div>
