added event listners and created frontend js files for myGarden, viewSpecificPlant

--- a/views/partials/mygarden.handlebars
+++ b/views/partials/mygarden.handlebars
@@ -9,7 +9,7 @@
   <div class="flex-row">
     <div class="frame-2">
       <div class="frame-13"><div class="my-garden-1">My garden</div></div>
-      <div class="add-plants">Add plants</div>
+      <div class="add-plants" id="addPlants">Add plants</div>
     </div>
     <div class="flex-col">
       <div class="blooming inter-normal-black-20px">Blooming</div>
