added script tags into handlebars for frontend code

--- a/views/partials/viewspecificplant.handlebars
+++ b/views/partials/viewspecificplant.handlebars
@@ -29,4 +29,5 @@
       <div class="frame-10"><div class="water-me">Water me!</div></div>
     </div>
   </div>
+  <script src=".\js\viewspecificplant.js"></script>
 </div>
