finalized styling of addplants

--- a/views/partials/addplants.handlebars
+++ b/views/partials/addplants.handlebars
@@ -3,119 +3,96 @@
 </head>
 
 <div class="add-plants-page screen">
-  <div class="banner">
-    <p class="pot-it-like-its-hot">Pot It Like It’s Hot</p>
-  </div>
   <div class="flex-row">
-      <div class="flex-row-1">
-          
-          
-          {{!-- <div class="left-sidebar">
-              <div class="my-garden"><a href="{{urlFor 'mygarden'}}">My garden</a></div>
-              <div class="add-plants"><a href="{{urlFor 'addplants'}}">Add Plants</a></div>
-          </div> --}}
-
-
-            <div class="plant-container plant-2">
-            <!-- Plant 1 -->
-              <div class="plant">
-                <div class="frame-9-1 frame-9-5"></div>
-                <div class="petunia inter-normal-heavy-metal-11px">English Ivy</div>
-                <div class="frame-10">
-                  <button class="add-plant add inter-normal-orange-white-11px" type="button">
-                    Add plant!
-                  </button>
+      <div class="flex-col">
+        <div class="flex-row-1">
+  <!-- Nav Bar -->
+          <div class="button-container">
+                <div class="button-potted inter-bold-white-12px">
+                  <a href="url">MY GARDEN</a></div>
+                <div class="button-potted inter-bold-white-12px">  
+                  <a href="url">ADD PLANTS</a>
                 </div>
-              </div>
-            <!-- Plant 5 -->
-              <div class="plant">
-                <div class="frame-9" id="#plant-image-5"></div>
-                <div class="petunia-5 inter-normal-heavy-metal-11px" id="#plant-name-5">Petunia</div>
-                <div class="frame-10">
-                  <button class="add-plant add inter-normal-orange-white-11px" type="button">
-                    Add plant!
-                  </button>
+                <div class="button-potted a inter-bold-white-12px">
+                  <a href="url">LOG OUT</a>
                 </div>
-              </div>
-
-            </div>
-      </div>
-          <div class="flex-col">
-            <h1 class="title">Add some plants!</h1>
-            <div class="flex-row-2">
-              <div class="plant-container-1 plant-container-4">
-            <!-- Plant 2 -->
-                <div class="plant-3 plant-2">
-                  <div class="frame-9-2 frame-9-5" id="#plant-image-2"></div>
-                  <div class="place inter-normal-heavy-metal-11px" id="#plant-name-2">Cactus</div>
-                  <div class="frame-10">
-                    <button class="add-plant add inter-normal-orange-white-11px" type="button">
-                      Add plant!
-                    </button>
-                  </div>
-                </div>
-                <!-- Plant 6 -->
-                <div class="plant-8 plant-2">
-                  <div class="frame-9" id="#plant-image-6"></div>
-                  <div class="petunia-5 inter-normal-heavy-metal-11px" id="#plant-name-6">Petunia</div>
-                  <div class="frame-10">
-                    <button class="add-plant add inter-normal-orange-white-11px" type="button">
-                      Add plant!
-                    </button>
-                  </div>
-                </div>
-              </div>
-              <div class="plant-container-2 plant-container-4">
-              <!-- Plant 3 -->
-                <div class="plant">
-                  <div class="frame-9-3 frame-9-5" id="#plant-image-3"></div>
-                  <div class="name inter-normal-heavy-metal-11px" id="#plant-name-3">Fern</div>
-                  <div class="frame-10">
-                    <button class="add-plant add inter-normal-orange-white-11px" type="button">
-                      Add plant!
-                    </button>
-                  </div>
-                </div>
-                <!-- Plant 7 -->
-                <div class="plant-1 plant-2">
-                  <div class="frame-9" id="#plant-image-7"></div>
-                  <div class="petunia-5 inter-normal-heavy-metal-11px" id="#plant-name-7">Aloe</div>
-                  <div class="frame-10">
-                    <button class="add-plant add inter-normal-orange-white-11px" type="button">
-                      Add plant!
-                    </button>
-                  </div>
-                </div>
-              </div>
-              <div class="plant-container-3 plant-container-4">
-                <!-- Plant 4 -->
-                <div class="plant">
-                  <div class="frame-9-4 frame-9-5" id="#plant-image-4"></div>
-                  <div class="snake-plant inter-normal-heavy-metal-11px" id="#plant-name-4">
-                    Snake Plant
-                  </div>
-                  <div class="frame-10">
-                    <button class="add-plant add inter-normal-orange-white-11px" type="button">
-                      Add plant!
-                    </button>
-                  </div>
-                </div>
-                <!-- Plant 8 -->
-                <div class="plant-1 plant-2">
-                  <div class="frame-9" id="#plant-image-8"></div>
-                  <div class="petunia-5 inter-normal-heavy-metal-11px" id="#plant-name -8">Monstera
-                  </div>
-                  <div class="frame-10-1">
-                    <button class="add-plant add inter-normal-orange-white-11px" type="button">
-                      Add plant!
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
-  </div>
+<!-- Plant 8 -->
+          <div class="plant-8 plant-column">
+            <div class="plant-8"></div>
+              <h2>Snake Plant</h2>
+                <img class="img-plant" src="/img/snakeplant.jpg" alt="img-plant-8"/>
+                  <div class="overlap-group overlap">
+                    <button class="add-plant-button inter-bold-white-12px">Add Plant</button>
+                </div>
+          </div>
+        </div>
+  <!-- Plant 7 -->
+        <div class="plant-7 plant-column">
+          <h2>Petunia</h2>
+          <img class="img-plant" src="/img/petunia.jpeg" alt="img-plant-7"/>
+            <div class="overlap-group overlap">
+              <button class="add-plant-button inter-bold-white-12px">Add Plant</button>
+            </div>
+        </div>
+  <!-- Plant 6 -->
+        <div class="plant-6 plant-column">
+          <div class="plant-6-1">
+            <h2>Monstera</h2>
+            <img class="img-plant" src="/img/monstera.jpg" alt="img-plant-6"/>
+          </div>
+            <div class="overlap-group overlap">
+              <button class="add-plant-button inter-bold-white-12px">Add Plant</button>
+            </div>
+        </div>
       </div>
-
-
-<script src="/public/js/plants.js"></script>
+  <!-- Column for plants 1 and 5 -->
+      <div class="flex-col-1">
+  <!-- Plant 1 -->
+        <div class="plant-1">
+          <h2>Aloe</h2>
+            <img class="img-plant" src="/img/aloe.jpg" alt="img-plant-1"/>
+                <div class="overlap-group overlap">
+                  <button class="add-plant-button inter-bold-white-12px">Add Plant</button>
+                </div>
+        </div>
+  <!-- Logo -->
+        <img class="logo" src="/img/PILIT_Logo.jpg" alt="PILIT_Logo"/>
+  <!-- Plant 5 -->
+        <div class="plant-5">
+          <h2>Orchid</h2>
+            <img class="img-plant" src="/img/orchid.jpeg" alt="img-plant-5"/>
+                <div class="overlap-group overlap">
+                  <button class="add-plant-button inter-bold-white-12px">Add Plant</button>
+                </div>
+        </div>
+    </div>
+  </div>
+  <!-- Plants on column column -->
+    <div class="plant-container plant-column">
+  <!-- Plant 2 -->
+      <div class="plant-2 plant-column">
+        <h2>Peace Lily</h2>
+          <img class="img-plant" src="/img/peacelily.jpg" alt="img-plant-2"/>
+            <div class="overlap-group-1">
+              <button class="add-plant-button inter-bold-white-12px">Add Plant</button>
+            </div>
+      </div>
+  <!-- Plant 3 -->
+      <div class="plant-3 plant-column">
+        <h2>Fern</h2>
+          <img class="img-plant" src="/img/fern.jpg" alt="img-plant-3"/>
+              <div class="overlap-group5 overlap">
+                <button class="add-plant-button inter-bold-white-12px">Add Plant</button>
+              </div>
+      </div>
+  <!-- Plant 4 -->
+      <div class="plant-4 plant-column">
+        <h2>Cactus</h2>
+        <img class="img-plant" src="/img/cactus.jpeg" alt="img-plant-2"/>
+            <div class="overlap-group-1">
+              <button class="add-plant-button inter-bold-white-12px">Add Plant</button>
+            </div>
+      </div>
+  </div>
+</div>
