--- a/public/css/addplants.css
+++ b/public/css/addplants.css
@@ -1,34 +1,129 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css");
 
-@import url("https://fonts.googleapis.com/css?family=Inter:400,500|Raleway:400");
+@import url("https://fonts.googleapis.com/css?family=Inter:400|Indie+Flower:400");
 
-:root {
-  --tan: #fcf9ec;
-  --tom-thumb: #42533b;
-  --background: #754a3f;
-  --black: #000000;
-  --text: #ffffff;
-  --heavy-metal: #2d2d2d;
-  --pink-swan: #b8b8b8;
-  --font-size-m: 11px;
-  --font-size-xxl: 15px;
-  --font-size-s2: 12px;
-  --font-size-xxxl: 36px;
-  --font-family-inter: "Inter", Helvetica;
-  --font-family-raleway: "Raleway", Helvetica;
+/* Universal selectors */
+* {
+  box-sizing: border-box;
+}
+
+/* Element selectors */
+body {
+  background-color: #fcf9ec;
+}
+
+a {
+  color: white;
+}
+
+h2 {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-weight: bolder;
+  color: #556B2F;
+}
+
+/* Class selectors */
+.add-plant {
+  align-items: center;
+  letter-spacing: 0;
+  line-height: normal;
+  min-height: 15px;
+  min-width: 57px;
+}
+
+.add-plant-button {
+  background-color: #95AC8E;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.add-plants-page .overlap {
+  align-items: center;
+  background-color: var(--chalet-green);
+  display: flex;
+  height: 29px;
+  justify-content: flex-end;
+  min-width: 80px;
+  padding: 0 10px;
 }
 
 .add-plants-page {
   align-items: flex-start;
   border: 1px none;
   display: flex;
-  flex-direction: column;
-  min-height: 832px;
-  width: 1280px;
+  gap: 14px;
+  min-width: 1042px;
+  overflow-x: hidden;
+  margin-top: 5%;
 }
 
-* {
-  box-sizing: border-box;
+.add-plants-page .plant-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.button-container {
+  align-items: flex-end;
+  background-image: url(/img/plantpot.jpg);
+  background-position: 50% 50%;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  gap: 19px;
+  min-height: 244px;
+  padding: 66px 68px;
+  width: 220px;
+}
+
+.button-potted {
+  text-align: center;
+  font-weight: bold;
+  letter-spacing: 0;
+  line-height: normal;
+  min-height: 17px;
+  width: 120px;
+}
+
+.button-potted a {
+  text-decoration: none;
+}
+
+.flex-col {
+  align-items: flex-end;
+  display: flex;
+  flex-direction: column;
+  min-height: 750px;
+  width: 416px;
+}
+
+.flex-col-1 {
+  align-items: center;
+  align-self: flex-end;
+  display: flex;
+  flex-direction: column;
+  min-height: 770px;
+  width: 344px;
+}
+
+.flex-row {
+  align-items: flex-start;
+  display: flex;
+  gap: 24px;
+  height: 781px;
+  min-width: 784px;
+}
+
+.flex-row-1 {
+  align-items: flex-start;
+  display: flex;
+  gap: 44px;
+  height: 245px;
+  margin-right: 3px;
+  min-width: 413px;
 }
 
 .hidden,
@@ -37,312 +132,130 @@
   visibility: hidden;
 }
 
-.flex-row {
+.img-plant {
+  height: 147px;
+  margin-right: 2px;
+  width: 147px;
+  border-radius: 50%;  
+}
+
+.logo {
+  max-width: 100%;
+  height: auto;
+  border-radius: 50%;
+}
+
+.overlap-group {
+  margin-right: 3px;
+}
+
+.overlap-group1 {
+  margin-right: 5px;
+}
+
+.overlap-group-1 {
   align-items: center;
+  background-color: var(--chalet-green);
   display: flex;
-  gap: 61px;
-  min-width: 1100px;
+  height: 29px;
+  justify-content: flex-end;
+  margin-right: 1px;
+  min-width: 80px;
+  padding: 0 10px;
 }
 
-.flex-row-1 {
-  align-items: center;
-  display: flex;
-  gap: 126px;
-  min-width: 425px;
-}
-
-.plant-container {
-  gap: 57px;
-  margin-top: 45px;
-  min-height: 461px;
-}
-
-.add-plants-page .plant-2 {
-  align-items: flex-start;
-  display: flex;
-  flex-direction: column;
-  width: 154px;
+.overlap-group5 {
+  margin-left: 11px;
 }
 
 .plant {
-  align-items: flex-start;
-  background-color: var(--text);
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  height: 202px;
-  overflow: hidden;
-  width: 154px;
-}
-
-.add-plants-page .petunia-5 {
-  letter-spacing: 0;
-  line-height: normal;
-  margin-left: 20px;
-  margin-top: 12px;
-  min-height: 13px;
-  white-space: nowrap;
-}
-
-.inter-normal-heavy-metal-11px {
-  color: var(--heavy-metal);
-  font-family: var(--font-family-inter);
-  font-size: var(--font-size-m);
-  font-style: normal;
-  font-weight: 400;
-}
-
-.frame-9 {
-  background-color: var(--pink-swan);
-  height: 115px;
-  width: 154px;
-}
-
-.frame-10 {
-  align-items: flex-start;
-  align-self: center;
-  background-color: var(--tom-thumb);
-  display: flex;
-  height: 25px;
-  margin-top: 24px;
-  padding: 5px 20px;
-  width: 94px;
-}
-
-.add-plants-page .add {
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.inter-normal-orange-white-11px {
-  color: var(--tan);
-  font-family: var(--font-family-inter);
-  font-size: var(--font-size-m);
-  font-style: normal;
-  font-weight: 400;
-}
-
-.add-plant {
-  min-height: 13px;
-  white-space: nowrap;
-}
-
-.petunia {
-  letter-spacing: 0;
-  line-height: normal;
-  margin-left: 20px;
-  margin-top: 12px;
-  min-height: 13px;
-  white-space: nowrap;
-}
-
-.add-plants-page .frame-9-5 {
-  background-position: 50% 50%;
-  background-size: cover;
-  height: 115px;
-  width: 154px;
-}
-
-.frame-9-1 {
-  background-image: url(img/frame-9.svg);
-}
-
-.left-sidebar {
-  align-items: flex-start;
-  background-color: #847263;
-  display: flex;
-  flex-direction: column;
-  gap: 14px;
-  height: 770px;
-  overflow: hidden;
-  padding: 47px 0;
-  width: 145px;
-}
-
-.my-garden {
-  align-self: center;
-  color: var(--tan);
-  font-family: var(--font-family-inter);
-  font-size: var(--font-size-s2);
-  font-weight: 400;
-  letter-spacing: 0;
-  line-height: normal;
-  margin-right: 16px;
-  min-height: 15px;
-  min-width: 61px;
-}
-
-.frame-12 {
-  align-items: flex-start;
-  background-color: #dbc0b9;
-  display: flex;
-  height: 35px;
-  padding: 9px 33px;
-  width: 190px;
-}
-
-.add-plants {
-  color: var(--text);
-  font-family: var(--font-family-inter);
-  font-size: var(--font-size-s2);
-  font-weight: 500;
-  min-height: 15px;
-}
-
-.flex-col {
-  align-items: flex-start;
-  display: flex;
-  flex-direction: column;
-  gap: 58px;
-  margin-bottom: 55px;
-  min-height: 561px;
-  width: 614px;
-}
-
-.title {
-  color: var(--black);
-  font-family: var(--font-family-raleway);
-  font-size: var(--font-size-xxxl);
-  font-weight: 400;
-  letter-spacing: 0;
-  line-height: normal;
-  margin-left: 58px;
-  min-height: 42px;
-  white-space: nowrap;
-}
-
-.flex-row-2 {
-  align-items: flex-end;
-  display: flex;
-  height: 461px;
-  min-width: 614px;
-}
-
-.add-plants-page .plant-container-4 {
-  display: flex;
-  flex-direction: column;
-}
-
-.plant-container-2 {
-  align-items: flex-start;
-  gap: 51px;
-  margin-left: 35px;
-  min-height: 455px;
-  width: 193px;
+  background-color: var(--alto);
+  border-radius: 73.5px;
+  height: 147px;
+  margin-right: 2px;
+  width: 147px;
 }
 
 .plant-1 {
-  align-self: flex-end;
-  background-color: var(--text);
-  border-radius: 10px;
-  height: 202px;
-  overflow: hidden;
-}
-
-.name {
-  letter-spacing: 0;
-  line-height: normal;
-  margin-left: 20px;
-  margin-top: 12px;
-  min-height: 13px;
-  white-space: nowrap;
-}
-
-.frame-9-3 {
-  background-image: url(img/frame-9-1.svg);
-}
-
-.plant-container-3 {
-  align-items: flex-start;
-  gap: 51px;
-  margin-left: 22px;
-  min-height: 455px;
-  width: 205px;
-}
-
-.frame-9-4 {
-  background-image: url(img/frame-9-3.svg);
-}
-
-.snake-plant {
-  letter-spacing: 0;
-  line-height: normal;
-  margin-left: 20px;
-  margin-top: 12px;
-  min-height: 13px;
-  white-space: nowrap;
-}
-
-.frame-10-1 {
-  align-items: flex-start;
-  align-self: center;
-  background-color: var(--tom-thumb);
-  box-shadow: 0px 4px 4px #00000040, 0px 4px 4px #00000040;
-  display: flex;
-  height: 25px;
-  margin-top: 24px;
-  padding: 5px 20px;
-  width: 94px;
-}
-
-.plant-container-1 {
   align-items: center;
-  gap: 57px;
-  min-height: 461px;
-  width: 159px;
+  gap: 10px;
+  margin-left: 5px;
+  min-height: 186px;
+  width: 149px;
+}
+
+.plant-2 {
+  align-items: center;
+  align-self: center;
+  gap: 12px;
+  margin-right: 43px;
+  min-height: 188px;
+  width: 149px;
 }
 
 .plant-3 {
-  background-color: var(--text);
-  border-radius: 10px;
-  height: 202px;
-  margin-right: 5px;
-  overflow: hidden;
+  align-items: center;
+  align-self: flex-end;
+  gap: 7px;
+  margin-top: 55px;
+  min-height: 183px;
+  width: 149px;
 }
 
-.place {
-  letter-spacing: 0;
-  line-height: normal;
-  margin-left: 20px;
-  margin-top: 12px;
-  min-height: 13px;
-  white-space: nowrap;
+.plant-4 {
+  align-items: center;
+  gap: 10px;
+  margin-top: 75px;
+  min-height: 186px;
+  width: 149px;
 }
 
-.frame-9-2 {
-  background-image: url(img/frame-9-2.svg);
+.plant-5 {
+  align-items: center;
+  gap: 17px;
+  margin-left: 5px;
+  margin-top: 70px;
+  min-height: 193px;
+  width: 149px;
+}
+
+.plant-6 {
+  align-items: center;
+  gap: 17px;
+  margin-top: 54px;
+  min-height: 191px;
+  width: 149px;
+}
+
+.plant-6-1 {
+  background-color: var(--alto);
+  border-radius: 73.5px/72.5px;
+  height: 145px;
+  margin-right: 2px;
+  width: 147px;
+}
+
+.plant-7 {
+  align-items: center;
+  align-self: center;
+  gap: 14px;
+  margin-left: 97px;
+  margin-top: 70px;
+  min-height: 190px;
+  width: 149px;
 }
 
 .plant-8 {
-  background-color: var(--text);
-  border-radius: 10px;
-  height: 202px;
-  margin-left: 5px;
-  overflow: hidden;
+  align-items: center;
+  align-self: flex-end;
+  gap: 11px;
+  min-height: 187px;
+  width: 149px;
 }
 
-.banner {
+.plant-container {
   align-items: flex-start;
-  background-color: var(--background);
-  display: flex;
-  height: 62px;
-  padding: 21px 46px;
-  width: 1280px;
-}
-
-.pot-it-like-its-hot {
-  color: var(--tan);
-  font-family: var(--font-family-inter);
-  font-size: var(--font-size-xxl);
-  font-weight: 400;
-  letter-spacing: 0;
-  line-height: normal;
-  min-height: 18px;
-  white-space: nowrap;
-}
-
-
-.add-plant {
-  background-color: transparent;
-  /* Add any other styling properties as needed */
+  margin-top: 72px;
+  min-height: 687px;
+  width: 246px;
 }
