--- a/public/css/login-logout.css
+++ b/public/css/login-logout.css
@@ -35,17 +35,13 @@ input[type="password"] {
   font-size: 16px;
 }
 
-input[type="submit"] {
-  background-color: #adad5c;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
+/* Class selectors */
+.add-plants-page {
+  justify-content: center;
+  flex-direction: center;
+  align-items: center;
 }
 
-/* Class selectors */
 .container {
   align-items: center;
   align-self: center;
@@ -56,34 +52,8 @@ input[type="submit"] {
   min-height: 393px;
 }
 
-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.inter-normal-black-12px {
-  color: var(--black);
-  font-family: var(--font-family-inter);
-  font-size: var(--font-size-s2);
-  font-style: normal;
-  font-weight: 400;
-}
-
 label {
   margin-bottom: 5px;
-}
-
-.login {
-  color: var(--text);
-  font-family: var(--font-family-inter);
-  font-size: var(--font-size-s2);
-  font-weight: 400;
-  left: 40px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  top: 5px;
 }
 
 .login-box {
@@ -92,26 +62,30 @@ label {
   border-radius: 30px;
   display: flex;
   flex-direction: column;
-  /* gap: 19px; */
   overflow: hidden;
-  padding: 31px 174px;
+  padding: 31px 100px;
   position: relative;
   width: fit-content;
 }
 
-.login-box-item {
-  letter-spacing: 0;
-  line-height: normal;
-  position: relative;
-  width: fit-content;
+.login-button,
+.create-account-button {
+  display: block;
+  margin-top: 16px;
+  padding: 8px 16px;
+  border: none;
+  color: white; 
+  border-radius: 8px;
+  background-color: #8fa571;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
 }
 
-.log-in {
-  align-items: center;
-  background-color: var(--tan);
-  display: flex;
-  height: 832px;
-  width: 100%;
+.login-button:hover,
+.create-account-button:hover {
+  background-color: #8fa571;
 }
 
 .login-page {
@@ -120,14 +94,142 @@ label {
   align-items: center;
 }
 
+.logo {
+  max-width: 100%;
+  height: auto;
+  border-radius: 50%
+}
+
 .logout-page {
   justify-content: center;
   flex-direction: center;
   align-items: center;
 }
 
-.logo {
-    max-width: 100%;
-    height: auto;
-    border-radius: 50%
+
+
+
+@import url("https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css");
+
+:root {
+  --alto: #d9d9d9;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.frame-1 {
+  align-items: flex-start;
+  border: 1px none;
+  display: flex;
+  gap: 29px;
+  min-width: 894px;
+}
+
+.hidden,
+.hidden * {
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.plant-container-1 {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  margin-top: 87px;
+  min-height: 663px;
+  width: 237px;
+}
+
+.plant-4 {
+  background-color: var(--alto);
+  border-radius: 73.5px;
+  height: 147px;
+  margin-top: 126px;
+  width: 147px;
+}
+
+.plant-3 {
+  align-self: flex-end;
+  background-color: var(--alto);
+  border-radius: 73.5px;
+  height: 147px;
+  margin-top: 96px;
+  width: 147px;
+}
+
+.plant {
+  background-color: var(--alto);
+  border-radius: 73.5px;
+  height: 147px;
+  width: 147px;
+}
+
+.frame-1 .flex {
+  align-items: center;
+  display: flex;
+}
+
+.flex-row {
+  gap: 63px;
+  height: 823px;
+  min-width: 628px;
+}
+
+.flex-col {
+  flex-direction: column;
+  min-height: 823px;
+  width: 344px;
+}
+
+.plant-5 {
+  background-color: var(--alto);
+  border-radius: 73.5px;
+  height: 147px;
+  margin-right: 15px;
+  margin-top: 94px;
+  width: 147px;
+}
+
+.plant-1 {
+  background-color: var(--alto);
+  border-radius: 73.5px;
+  height: 147px;
+  margin-left: 1px;
+  width: 147px;
+}
+
+.pilit_-logo-1 {
+  height: 348px;
+  margin-top: 87px;
+  object-fit: cover;
+  width: 344px;
+}
+
+.plant-container {
+  align-items: flex-end;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 26px;
+  min-height: 623px;
+  width: 221px;
+}
+
+.plant-7 {
+  align-self: flex-start;
+  background-color: var(--alto);
+  border-radius: 73.5px;
+  height: 147px;
+  margin-top: 96px;
+  width: 147px;
+}
+
+.plant-6 {
+  background-color: var(--alto);
+  border-radius: 73.5px;
+  height: 147px;
+  margin-right: 1px;
+  margin-top: 86px;
+  width: 147px;
 }
