--- a/public/css/mygarden.css
+++ b/public/css/mygarden.css
@@ -1,38 +1,120 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css");
 
-@import url("https://fonts.googleapis.com/css?family=Raleway:400|Inter:400,300,600");
+@import url("https://fonts.googleapis.com/css?family=Inter:400|Indie+Flower:400");
 
-:root {
-  --tan: #fcf9ec;
-  --background: #754a3f;
-  --pink: #f1a791;
-  --black: #000000;
-  --text: #ffffff;
-  --concrete: #f2f2f2;
-  --pink-swan: #b8b8b8;
-  --font-size-m: 11px;
-  --font-size-s: 10px;
-  --font-size-xxxl: 20px;
-  --font-size-xxl: 15px;
-  --font-size-s2: 12px;
-  --font-size-xxxl: 36px;
-  --font-family-inter: "Inter", Helvetica;
-  --font-family-raleway: "Raleway", Helvetica;
-}
-
+/* Universal selectors */
 * {
   box-sizing: border-box;
 }
 
-.my-garden {
+/* Element selectors */
+body {
+  background-color: #fcf9ec;
+}
+
+a {
+  color: white;
+}
+
+h2 {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-weight: bolder;
+  color: #556B2F;
+}
+
+/* Class selectors */
+.add-plant {
+  align-items: center;
+  letter-spacing: 0;
+  line-height: normal;
+  min-height: 15px;
+  min-width: 57px;
+}
+
+.add-plant-button {
+  background-color: #95AC8E;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.add-plants-page .overlap {
+  align-items: center;
+  background-color: var(--chalet-green);
+  display: flex;
+  height: 29px;
+  justify-content: flex-end;
+  min-width: 80px;
+  padding: 0 10px;
+}
+
+.add-plants-page {
   align-items: flex-start;
-  background-color: var(--tan);
   border: 1px none;
   display: flex;
+  gap: 14px;
+  min-width: 1042px;
+  overflow-x: hidden;
+  margin-top: 5%;
+}
+
+.add-plants-page .plant-column {
+  display: flex;
   flex-direction: column;
-  height: 832px;
-  overflow: hidden;
-  width: 1280px;
+}
+
+.button-container {
+  align-items: flex-end;
+  background-image: url(/img/plantpot.jpg);
+  background-position: 50% 50%;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  gap: 19px;
+  min-height: 244px;
+  padding: 66px 68px;
+  width: 220px;
+}
+
+.button-potted {
+  text-align: center;
+  font-weight: bold;
+  letter-spacing: 0;
+  line-height: normal;
+  min-height: 17px;
+  width: 120px;
+}
+
+.button-potted a {
+  text-decoration: none;
+}
+
+.flex-col {
+  align-items: flex-end;
+  display: flex;
+  flex-direction: column;
+  min-height: 750px;
+  width: 416px;
+}
+
+.flex-row {
+  align-items: flex-start;
+  display: flex;
+  gap: 24px;
+  height: 781px;
+  min-width: 784px;
+}
+
+.flex-row-1 {
+  align-items: flex-start;
+  display: flex;
+  gap: 44px;
+  height: 245px;
+  margin-right: 3px;
+  min-width: 413px;
 }
 
 .hidden,
@@ -41,372 +123,116 @@
   visibility: hidden;
 }
 
-.flex-row {
-  align-items: flex-end;
-  display: flex;
-  height: 803px;
-  min-width: 1038px;
+.img-plant {
+  height: 147px;
+  margin-right: 2px;
+  width: 147px;
+  border-radius: 50%;  
 }
 
-.frame-2 {
+.logo {
+  max-width: 100%;
+  height: auto;
+  border-radius: 50%;
+}
+
+.overlap-group {
+  margin-right: 3px;
+}
+
+.overlap-group1 {
+  margin-right: 5px;
+}
+
+.overlap-group-1 {
   align-items: center;
-  align-self: flex-start;
-  background-color: #847263;
+  background-color: var(--chalet-green);
   display: flex;
-  flex-direction: column;
-  gap: 18px;
-  height: 770px;
-  overflow: hidden;
-  padding: 77px 0;
-  width: 190px;
-}
-
-.add-plants {
-  color: var(--tan);
-  font-family: var(--font-family-inter);
-  font-size: var(--font-size-s2);
-  font-weight: 400;
-  letter-spacing: 0;
-  line-height: normal;
-  margin-left: 3px;
-  min-height: 15px;
-  min-width: 61px;
-}
-
-.frame-13 {
-  align-items: flex-start;
-  background-color: #dbc0b9;
-  display: flex;
-  height: 35px;
-  margin-left: 2px;
-  padding: 9px 64px;
-  width: 190px;
-}
-
-.my-garden-1 {
-  color: var(--text);
-  font-family: var(--font-family-inter);
-  font-size: var(--font-size-s2);
-  font-weight: 600;
-  letter-spacing: 0;
-  line-height: normal;
-  min-height: 15px;
-}
-
-.flex-col {
-  align-items: flex-start;
-  display: flex;
-  flex-direction: column;
-  margin-left: 113px;
-  min-height: 669px;
-  width: 195px;
-}
-
-.plant-5 {
-  align-items: center;
-  background-color: var(--concrete);
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  height: 258px;
-  margin-top: 18px;
-  overflow: hidden;
-  width: 195px;
-}
-
-.frame-10-1 {
-  align-items: flex-start;
-  background-color: #717171;
-  display: flex;
-  height: 25px;
+  height: 29px;
+  justify-content: flex-end;
   margin-right: 1px;
-  margin-top: 9px;
-  padding: 5px 20px;
-  width: 94px;
+  min-width: 80px;
+  padding: 0 10px;
 }
 
-.inter-normal-white-11px {
-  color: var(--text);
-  font-family: var(--font-family-inter);
-  font-size: var(--font-size-m);
-  font-style: normal;
-  font-weight: 400;
+.overlap-group5 {
+  margin-left: 11px;
 }
 
-.water-me {
-  letter-spacing: 0;
-  line-height: normal;
-  min-height: 13px;
-  white-space: nowrap;
+.plant {
+  background-color: var(--alto);
+  border-radius: 73.5px;
+  height: 147px;
+  margin-right: 2px;
+  width: 147px;
 }
 
-.inter-normal-black-11px {
-  color: var(--black);
-  font-family: var(--font-family-inter);
-  font-size: var(--font-size-m);
-  font-style: normal;
-  font-weight: 400;
-}
-
-.plant-name-1 {
-  letter-spacing: 0;
-  line-height: normal;
-  margin-left: 7px;
-  margin-top: 6px;
-  min-height: 13px;
-  min-width: 58px;
-  white-space: nowrap;
-}
-
-.frame-9 {
-  background-color: var(--pink-swan);
-  height: 191px;
-  margin-left: 2px;
-  width: 197px;
-}
-
-.inter-normal-black-20px {
-  color: var(--black);
-  font-family: var(--font-family-inter);
-  font-size: var(--font-size-xxxl);
-  font-style: normal;
-  font-weight: 400;
-}
-
-.place {
-  letter-spacing: 0;
-  line-height: normal;
-  margin-top: 67px;
-  min-height: 24px;
-  white-space: nowrap;
-}
-
-.blooming {
-  letter-spacing: 0;
-  line-height: normal;
-  min-height: 24px;
-  white-space: nowrap;
-}
 
 .plant-2 {
   align-items: center;
-  background-color: var(--text);
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  height: 267px;
-  margin-top: 11px;
-  overflow: hidden;
-  width: 195px;
-}
-
-.snake-plant {
-  letter-spacing: 0;
-  line-height: normal;
-  margin-right: 2px;
-  margin-top: 11px;
-  min-height: 13px;
-  min-width: 61px;
-  white-space: nowrap;
-}
-
-.my-garden .frame-9-4 {
-  background-position: 50% 50%;
-  background-size: cover;
-  height: 191px;
-  margin-left: 2px;
-  width: 197px;
-}
-
-.frame-9-1 {
-  background-image: url(https://anima-uploads.s3.amazonaws.com/projects/6453f6cab783beb5cb352f96/releases/645823b4a397fbc4edc1980c/img/frame-9.svg);
-}
-
-.frame-10 {
-  align-items: flex-start;
-  background-color: var(--pink);
-  display: flex;
-  height: 25px;
-  margin-right: 1px;
-  margin-top: 13px;
-  padding: 5px 20px;
-  width: 94px;
-}
-
-.flex-row-1 {
-  align-items: flex-end;
-  display: flex;
-  gap: 75px;
-  height: 758px;
-  margin-left: 75px;
-  min-width: 465px;
-}
-
-.flex-col-1 {
-  align-items: flex-end;
-  display: flex;
-  flex-direction: column;
-  min-height: 758px;
-  width: 195px;
-}
-
-.title {
-  color: var(--black);
-  font-family: var(--font-family-raleway);
-  font-size: var(--font-size-xxxl);
-  font-weight: 400;
-  letter-spacing: 0;
-  line-height: normal;
-  margin-right: 1px;
-  min-height: 42px;
-  min-width: 178px;
-  white-space: nowrap;
+  align-self: center;
+  gap: 12px;
+  margin-right: 43px;
+  min-height: 188px;
+  width: 149px;
 }
 
 .plant-3 {
   align-items: center;
-  background-color: var(--text);
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  height: 267px;
-  margin-top: 82px;
-  overflow: hidden;
-  width: 195px;
-}
-
-.frame-9-2 {
-  background-image: url(https://anima-uploads.s3.amazonaws.com/projects/6453f6cab783beb5cb352f96/releases/645823b4a397fbc4edc1980c/img/frame-9-1.svg);
-}
-
-.hibiscus {
-  letter-spacing: 0;
-  line-height: normal;
-  margin-right: 14px;
-  margin-top: 9px;
-  min-height: 13px;
-  min-width: 45px;
-  white-space: nowrap;
-}
-
-.my-garden .address-3 {
-  letter-spacing: 0;
-  line-height: normal;
-  min-height: 12px;
-  min-width: 111px;
-  white-space: nowrap;
-}
-
-.address-1 {
-  margin-top: 21px;
-}
-
-.inter-light-black-10px {
-  color: var(--black);
-  font-family: var(--font-family-inter);
-  font-size: var(--font-size-s);
-  font-style: normal;
-  font-weight: 300;
-}
-
-.plant-6 {
-  align-items: center;
-  background-color: var(--concrete);
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  height: 258px;
-  margin-top: 109px;
-  overflow: hidden;
-  width: 195px;
-}
-
-.plant-name {
-  letter-spacing: 0;
-  line-height: normal;
-  margin-right: 1px;
-  margin-top: 9px;
-  min-height: 13px;
-  min-width: 58px;
-  white-space: nowrap;
-}
-
-.address-2 {
-  margin-top: 10px;
-}
-
-.plant-container {
-  align-items: flex-start;
-  display: flex;
-  flex-direction: column;
-  gap: 118px;
-  min-height: 634px;
-  width: 195px;
-}
-
-.plant-7 {
-  align-items: center;
-  background-color: var(--concrete);
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  height: 258px;
-  overflow: hidden;
-  width: 195px;
-}
-
-.address {
-  letter-spacing: 0;
-  line-height: normal;
-  margin-left: 1px;
-  margin-top: 10px;
-  min-height: 12px;
-  min-width: 112px;
-  white-space: nowrap;
+  align-self: flex-end;
+  gap: 7px;
+  margin-top: 55px;
+  min-height: 183px;
+  width: 149px;
 }
 
 .plant-4 {
   align-items: center;
-  background-color: var(--text);
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  height: 258px;
-  overflow: hidden;
-  width: 195px;
+  gap: 10px;
+  margin-top: 75px;
+  min-height: 186px;
+  width: 149px;
 }
 
-.succulent {
-  letter-spacing: 0;
-  line-height: normal;
-  margin-right: 7px;
-  margin-top: 9px;
-  min-height: 13px;
-  min-width: 52px;
-  white-space: nowrap;
+
+
+.plant-6 {
+  align-items: center;
+  gap: 17px;
+  margin-top: 54px;
+  min-height: 191px;
+  width: 149px;
 }
 
-.frame-9-3 {
-  background-image: url(https://anima-uploads.s3.amazonaws.com/projects/6453f6cab783beb5cb352f96/releases/645823b4a397fbc4edc1980c/img/frame-9-2.svg);
+.plant-6-1 {
+  background-color: var(--alto);
+  border-radius: 73.5px/72.5px;
+  height: 145px;
+  margin-right: 2px;
+  width: 147px;
 }
 
-.frame-3 {
+.plant-7 {
+  align-items: center;
+  align-self: center;
+  gap: 14px;
+  margin-left: 97px;
+  margin-top: 70px;
+  min-height: 190px;
+  width: 149px;
+}
+
+.plant-8 {
+  align-items: center;
+  align-self: flex-end;
+  gap: 11px;
+  min-height: 187px;
+  width: 149px;
+}
+
+.plant-container {
   align-items: flex-start;
-  background-color: var(--background);
-  display: flex;
-  height: 62px;
-  margin-top: 4px;
-  padding: 21px 46px;
-  width: 1280px;
-}
-
-.pot-it-like-its-hot {
-  color: var(--tan);
-  font-family: var(--font-family-inter);
-  font-size: var(--font-size-xxl);
-  font-weight: 400;
-  letter-spacing: 0;
-  line-height: normal;
-  min-height: 18px;
-  white-space: nowrap;
+  margin-top: 72px;
+  min-height: 687px;
+  width: 246px;
 }
