added back in the id's for login buttons

--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -11,8 +11,8 @@
               <input type="text" id="username" name="username">   
               <label for="password">Password:</label>
               <input type="password" id="password" name="password">       
-              <button class="login-button">Log In</button>
-              <button class="create-account-button">Create Account</button>
+              <button class="login-button" id="login">Log In</button>
+              <button class="create-account-button" id="createAccount">Create Account</button>
           </form>
       </div>
   </div>
