--- a/views/partials/mygarden.handlebars
+++ b/views/partials/mygarden.handlebars
@@ -1,69 +1,100 @@
 <head>
-    <link rel="stylesheet" href="./css/mygarden.css">
+  <link rel="stylesheet" href="/css/mygarden.css">
 </head>
 
-<div class="my-garden screen">
-  <div class="frame-3">
-    <p class="pot-it-like-its-hot">Pot It Like It’s Hot</p>
-  </div>
-  <div class="flex-row">
-    <div class="frame-2">
-      <div class="frame-13"><div class="my-garden-1">My garden</div></div>
-      <div class="add-plants" id="addPlants">Add plants</div>
-    </div>
+<div class="my-garden-page screen">
+<div class="flex-row">
     <div class="flex-col">
-      <div class="blooming inter-normal-black-20px">Blooming</div>
-      <div class="plant-2">
-        <div class="frame-9-1 frame-9-4"></div>
-        <div class="snake-plant inter-normal-black-11px">Snake plant</div>
-        <div class="frame-10">
-          <div class="water-me inter-normal-white-11px">Water me!</div>
+      <div class="flex-row-1">
+<!-- Nav Bar -->
+        <div class="button-container">
+              <div class="button-potted inter-bold-white-12px">
+                <a href="url">MY GARDEN</a></div>
+              <div class="button-potted inter-bold-white-12px">  
+                <a href="url">ADD PLANTS</a>
+              </div>
+              <div class="button-potted a inter-bold-white-12px">
+                <a href="url">LOG OUT</a>
+              </div>
+        </div>
+<!-- Plant 8 -->
+        <div class="plant-8 plant-column">
+          <div class="plant-8"></div>
+            <h2>Prayer Plant</h2>
+              <img class="img-plant" src="/img/prayerplant.jpg" alt="img-plant-8"/>
+                <div class="overlap-group overlap">
+                  <button class="water-plant-button inter-bold-white-12px" id="waterPlants">Water Plant</button>
+              </div>
         </div>
       </div>
-      <div class="place inter-normal-black-20px">Vining</div>
-      <div class="plant-5">
-        <div class="frame-9"></div>
-        <div class="plant-name-1 inter-normal-black-11px">Plant name</div>
-        <div class="frame-10-1">
-          <div class="water-me inter-normal-white-11px">Water me!</div>
+<!-- Plant 7 -->
+      <div class="plant-7 plant-column">
+        <h2>Olive Tree</h2>
+        <img class="img-plant" src="/img/olivetree.jpg" alt="img-plant-7"/>
+          <div class="overlap-group overlap">
+            <button class="water-plant-button inter-bold-white-12px" id="waterPlants">Water Plant</button>
+          </div>
+      </div>
+<!-- Plant 6 -->
+      <div class="plant-6 plant-column">
+        <div class="plant-6-1">
+          <h2>Banana Tree</h2>
+          <img class="img-plant" src="/img/bananatree.jpg" alt="img-plant-6"/>
         </div>
+          <div class="overlap-group overlap">
+            <button class="water-plant-button inter-bold-white-12px" id="waterPlants">Water Plant</button>
+          </div>
       </div>
     </div>
-    <div class="flex-row-1">
+<!-- Column for plants 1 and 5 -->
       <div class="flex-col-1">
-        <h1 class="title">My garden</h1>
-        <div class="plant-3">
-          <div class="frame-9-2 frame-9-4"></div>
-          <div class="hibiscus inter-normal-black-11px">Hibiscus</div>
-          <p class="address-1 address-3 inter-light-black-10px">
-            2 days till next watering
-          </p>
-        </div>
-        <div class="plant-6">
-          <div class="frame-9"></div>
-          <div class="plant-name inter-normal-black-11px">Plant name</div>
-          <p class="address-2 address-3 inter-light-black-10px">
-            2 days till next watering
-          </p>
-        </div>
+        <!-- Plant 1 -->
+              <div class="plant-1">
+                <h2>ZZ Plant</h2>
+                  <img class="img-plant" src="/img/zzplant.jpg" alt="img-plant-1"/>
+                      <div class="overlap-group overlap">
+                        <button class="water-plant-button inter-bold-white-12px" id="waterPlants">Water Plant</button>
+                      </div>
+              </div>    
+<!-- Logo -->
+      <img class="logo" src="/img/PILIT_Logo.jpg" alt="PILIT_Logo"/>
+<!-- Plant 5 -->
+      <div class="plant-5">
+        <h2>Bird Nest Fern</h2>
+          <img class="img-plant" src="/img/birdnestfern.jpg" alt="img-plant-5"/>
+              <div class="overlap-group overlap">
+                <button class="water-plant-button inter-bold-white-12px" id="waterPlants">Water Plant</button>
+              </div>
       </div>
-      <div class="plant-container">
-        <div class="plant-4">
-          <div class="frame-9-3 frame-9-4"></div>
-          <div class="succulent inter-normal-black-11px">Succulent</div>
-          <p class="address inter-light-black-10px">
-            3 days till next watering
-          </p>
-        </div>
-        <div class="plant-7">
-          <div class="frame-9"></div>
-          <div class="plant-name inter-normal-black-11px">Plant name</div>
-          <p class="address inter-light-black-10px">
-            3 days till next watering
-          </p>
-        </div>
+  </div>
+</div>
+    <!-- Plants on right column
+    <div class="flex-row">
+      <div class="flex-col">
+        <div class="flex-row-3"> -->
+      <!-- Plant 2 -->
+          <!-- <div class="plant-2 plant-column">
+            <h2>Peace Lily</h2>
+              <img class="img-plant" src="/img/peacelily.jpg" alt="img-plant-2"/>
+                <div class="overlap-group-1">
+                  <button class="add-plant-button inter-bold-white-12px">Add Plant</button>
+                </div>
+          </div> -->
+      <!-- Plant 3 -->
+          <!-- <div class="plant-3 plant-column">
+            <h2>Fern</h2>
+              <img class="img-plant" src="/img/fern.jpg" alt="img-plant-3"/>
+                  <div class="overlap-group5 overlap">
+                    <button class="add-plant-button inter-bold-white-12px">Add Plant</button>
+                  </div>
+          </div> -->
+      <!-- Plant 4 -->
+          <!-- <div class="plant-4 plant-column">
+            <h2>Cactus</h2>
+            <img class="img-plant" src="/img/cactus.jpeg" alt="img-plant-2"/>
+                <div class="overlap-group-1">
+                  <button class="add-plant-button inter-bold-white-12px">Add Plant</button>
+                </div>
+          </div> -->
       </div>
     </div>
-  </div>
-  <script src=".\js\myGarden.js"></script>
-</div>
