finalized viewplants.hbs

--- a/public/css/viewplant.css
+++ b/public/css/viewplant.css
@@ -87,7 +87,7 @@
 }
 
 .frame-9 {
-  background-image: url(https://anima-uploads.s3.amazonaws.com/projects/6453f6cab783beb5cb352f96/releases/64582c2f5250ee1b14b309cd/img/frame-9.svg);
+  background-image: url(/img/cactus.jpeg);
   background-position: 50% 50%;
   background-size: cover;
   border-radius: 10px;
