--- a/views/partials/viewspecificplant.handlebars
+++ b/views/partials/viewspecificplant.handlebars
@@ -8,8 +8,10 @@
   </div>
   <div class="flex-row">
     <div class="frame-2">
-      <div class="frame-13"><div class="my-garden" id="myGarden">My garden</div></div>
-      <div class="add-plants" id="addPlants">Add plants</div>
+      <div class="frame-13">
+        <div class="my-garden" id="myGarden">My garden</div></div>
+      <div class="my-garden" id="addPlants">Add plants</div>
+      <div class="my-garden" id="logOut">Log Out</div>
     </div>
     <div class="frame-9"></div>
     <div class="flex-col">
